@@ -1,3 +1,7 @@
+2007-09-21	Daniel Hellstrom <daniel@gaisler.com>
+
+	* shared/can/occan.c: Fix warning on Diab compiler.
+
 2007-09-19	Daniel Hellstrom <daniel@gaisler.com>
 
 	* shared/can/occan.c: Fix Reenable command and fix typo.
